--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "cheerio": "^1.0.0-rc.3"
+    "cheerio": "^1.0.0-rc.3",
+    "fetch": "^1.1.0",
+    "follow-redirects": "latest",
+    "get-json": "^1.0.1",
+    "jsdom": "^15.2.1",
+    "node-fetch": "^2.6.0",
+    "puppeteer-extra": "^2.1.3"
+  },
+  "devDependencies": {
+    "jquery": "^3.4.1",
+    "puppeteer-extra-plugin-stealth": "^2.2.2"
   }
 }
