--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "discord.js": "^11.5.1",
     "fetch": "^1.1.0",
     "follow-redirects": "latest",
     "get-json": "^1.0.1",
